# fastccg

./: .gitignore  CHANGELOG  README.md  pyproject.toml
.fcvs/: memory.jsonl
docs/: README.md  advanced_embedding.md  advanced_rag.md  advanced_usage.md  api_reference.md  cli_usage.md  embedding_and_rag.md  fcvs_cli.md  index.md  quick_start.md  supported_models.md
fastccg/: __init__.py  errors.py  memory.py
fastccg/cli/: fcvs_cli.py
fastccg/core/: model_base.py  terminal.py
fastccg/embedding/: __init__.py  base.py  google.py  mock.py  openai.py
fastccg/models/: __init__.py  claude.py  gemini.py  gpt.py  mistral.py  mock.py
fastccg/rag/: __init__.py  prompts.py  rag.py
fastccg/types/: prompt.py  response.py
fastccg/utils/: cli.py  fastccg.py
fastccg/vector_store/: base.py  in_memory.py
tests/: advanced_rag_example.py  advanced_test.py  async_test.py  base_test.py  embed.py  embed_test.py  gpt_test.py  memory_test.py  mock_test.py  mocking.py  rag_example.py  simple_memory_test.py
